[ENH] update the rsr config file
update the way to install it by configure the path of rsr files
add the spot5hrg2 rsr file

--- a/sen2agri-processors/VegetationStatus/CMakeLists.txt
+++ b/sen2agri-processors/VegetationStatus/CMakeLists.txt
@@ -4,6 +4,10 @@ set(GAPFILLING_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/temporalgapfilling/src/li
 set(PHENOTB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/phenotb/src/Library)
 set(PHENOTB_LIBRARY OTBPheno)
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/TestScripts/rsr_sensor_file.cfg.in
+               ${CMAKE_BINARY_DIR}/rsr_sensor_file.cfg
+               @ONLY)
+
 add_subdirectory(otb-bv/src)
 add_subdirectory(phenotb/src)
 add_subdirectory(temporalgapfilling/src)
@@ -14,14 +18,8 @@ install(PROGRAMS    TestScripts/lai_retrieve_processing.py
                     TestScripts/pheno_processing.py
         DESTINATION bin/)
 #        DESTINATION bin/python)
-install(FILES lai.map
-              LaiCommonBVDistributionSamples.txt
-        DESTINATION usr/share/sen2agri)
 
-install(FILES ConfigFiles/rsr_cfg.txt
-              ConfigFiles/Lai_Bands_Cfgs.cfg
-              ConfigFiles/Lai_Bands_S2.cfg
-              ConfigFiles/Lai_Bands_L8.cfg
+install(FILES TestScripts/rsr_cfg.txt
               otb-bv/data/landsat8_7b.rsr
               otb-bv/data/Sentinel2_10m.rsr
               otb-bv/data/Sentinel2_10m_real.rsr
@@ -29,4 +27,8 @@ install(FILES ConfigFiles/rsr_cfg.txt
               otb-bv/data/Sentinel2_real.rsr
               otb-bv/data/spot4hrvir1.rsr
               otb-bv/data/spot5hrg1.rsr
-        DESTINATION usr/share/sen2agri/)
+              otb-bv/data/spot5hrg2.rsr
+              lai.map
+              LaiCommonBVDistributionSamples.txt
+              ${CMAKE_BINARY_DIR}/rsr_sensor_file.cfg
+        DESTINATION share/sen2agri/)
