[ENH] WIP first functional version of the composite
first itération ok

--- a/sen2agri-processors/Composite/CMakeLists.txt
+++ b/sen2agri-processors/Composite/CMakeLists.txt
@@ -12,6 +12,7 @@ add_subdirectory(QuantifyImage)
 
 install(PROGRAMS TestScripts/composite_processing.py
                  TestScripts/composite_processing_CS.py  
+                 TestScripts/composite_processing_THEIA.py 
         DESTINATION bin/)
 #        DESTINATION bin/python)
 
